--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://William2399.github.io/weather",
+  "homepage": "http://William2399.github.io/weather",
   "name": "weather-application",
   "version": "0.1.0",
   "private": true,
